added activity and fragment for user prefs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.android.routegradient.MainActivity"
+            android:name=".MainActivity"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,15 +21,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.android.routegradient.ResultActivity"
-            android:parentActivityName="com.example.android.routegradient.MainActivity">
+            android:name=".ResultActivity"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.routegradient.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.android.routegradient.SettingsActivity"
-            android:parentActivityName="com.example.android.routegradient.MainActivity">
+            android:name=".SettingsActivity"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.routegradient.MainActivity" />
